--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 11:30:45 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 11:31:28 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -157,13 +157,13 @@ E thru 3</td>
     </tr>
     <tr>
       <td class="bigbold">Jon Hosegood</td>
-      <td class="bigbold">-8</td>
+      <td class="bigbold">-7</td>
       <td>Scottie Scheffler -3
 Not started</td>
       <td>Patrick Cantlay -2
-E thru 3</td>
-      <td>Will Zalatoris -2
--1 thru 3</td>
+E thru 4</td>
+      <td>Will Zalatoris -1
+E thru 4</td>
       <td>Tony Finau -1
 Not started</td>
       <td class="greyout leftborder">Shane Lowry +1
@@ -177,7 +177,7 @@ Not started</td>
       <td>Corey Conners -3
 -1 thru 8</td>
       <td>Patrick Cantlay -2
-E thru 3</td>
+E thru 4</td>
       <td>Tyrrell Hatton -1
 -1 thru 5</td>
       <td>Jon Rahm E
@@ -193,7 +193,7 @@ Not started</td>
       <td>Sungjae Im -5
 E thru 6</td>
       <td>Patrick Cantlay -2
-E thru 3</td>
+E thru 4</td>
       <td>Collin Morikawa E
 -1 thru 4</td>
       <td>Viktor Hovland(W) +1
@@ -209,7 +209,7 @@ Not started</td>
       <td>Cameron Smith(W) -4
 Not started</td>
       <td>Patrick Cantlay -2
-E thru 3</td>
+E thru 4</td>
       <td>Collin Morikawa E
 -1 thru 4</td>
       <td>Rory McIlroy E
@@ -236,28 +236,12 @@ Not started</td>
 Not started</td>
     </tr>
     <tr>
-      <td class="bigbold">Andrew Winchester</td>
-      <td class="bigbold">-5</td>
-      <td>Cameron Smith -4
-Not started</td>
-      <td>Will Zalatoris -2
--1 thru 3</td>
-      <td>Matthew Fitzpatrick E
-+1 thru 2</td>
-      <td>Shane Lowry +1
-Not started</td>
-      <td class="greyout leftborder">Brooks Koepka +2
--1 thru 2</td>
-      <td class="greyout">Justin Thomas(W) +4
-Not started</td>
-    </tr>
-    <tr>
       <td class="bigbold">Matt Tummon</td>
       <td class="bigbold">-5</td>
       <td>Dustin Johnson -4
 -1 thru 4</td>
       <td>Patrick Cantlay -2
-E thru 3</td>
+E thru 4</td>
       <td>Jon Rahm E
 -2 thru 4</td>
       <td>Viktor Hovland +1
@@ -268,32 +252,16 @@ E thru 3</td>
 -1 thru 2</td>
     </tr>
     <tr>
-      <td class="bigbold">Chris Bryson</td>
+      <td class="bigbold">Andrew Winchester</td>
       <td class="bigbold">-4</td>
-      <td>Scottie Scheffler(W) -3
+      <td>Cameron Smith -4
 Not started</td>
-      <td>Will Zalatoris -2
--1 thru 3</td>
-      <td>Jon Rahm E
--2 thru 4</td>
+      <td>Will Zalatoris -1
+E thru 4</td>
+      <td>Matthew Fitzpatrick E
++1 thru 2</td>
       <td>Shane Lowry +1
 Not started</td>
-      <td class="greyout leftborder">Brooks Koepka +2
--1 thru 2</td>
-      <td class="greyout">Jordan Spieth +2
-E thru 3</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">-4</td>
-      <td>Will Zalatoris -2
--1 thru 3</td>
-      <td>Tony Finau -1
-Not started</td>
-      <td>Daniel Berger -1
-Not started</td>
-      <td>Collin Morikawa E
--1 thru 4</td>
       <td class="greyout leftborder">Brooks Koepka +2
 -1 thru 2</td>
       <td class="greyout">Justin Thomas(W) +4
@@ -332,10 +300,42 @@ E thru 3</td>
 Not started</td>
     </tr>
     <tr>
+      <td class="bigbold">Chris Bryson</td>
+      <td class="bigbold">-3</td>
+      <td>Scottie Scheffler(W) -3
+Not started</td>
+      <td>Will Zalatoris -1
+E thru 4</td>
+      <td>Jon Rahm E
+-2 thru 4</td>
+      <td>Shane Lowry +1
+Not started</td>
+      <td class="greyout leftborder">Brooks Koepka +2
+-1 thru 2</td>
+      <td class="greyout">Jordan Spieth +2
+E thru 3</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Al Shulman</td>
+      <td class="bigbold">-3</td>
+      <td>Will Zalatoris -1
+E thru 4</td>
+      <td>Tony Finau -1
+Not started</td>
+      <td>Daniel Berger -1
+Not started</td>
+      <td>Collin Morikawa E
+-1 thru 4</td>
+      <td class="greyout leftborder">Brooks Koepka +2
+-1 thru 2</td>
+      <td class="greyout">Justin Thomas(W) +4
+Not started</td>
+    </tr>
+    <tr>
       <td class="bigbold">Shane Tummon</td>
       <td class="bigbold">-3</td>
       <td>Patrick Cantlay -2
-E thru 3</td>
+E thru 4</td>
       <td>Tony Finau -1
 Not started</td>
       <td>Jon Rahm(W) E
@@ -381,17 +381,17 @@ Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">3</td>
+      <td class="bigbold">2</td>
       <td>Jon Rahm E
 -2 thru 4</td>
       <td>Collin Morikawa E
 -1 thru 4</td>
       <td>Viktor Hovland(W) +1
 +1 thru 3</td>
-      <td>Brooks Koepka +2
+      <td>Patrick Reed +1
+-1 thru 8</td>
+      <td class="greyout leftborder">Brooks Koepka +2
 -1 thru 2</td>
-      <td class="greyout leftborder">Patrick Reed +2
-E thru 7</td>
       <td class="greyout">Luke List +5
 Not started</td>
     </tr>
