--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 11:35:46 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 11:36:29 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -268,22 +268,6 @@ E thru 3</td>
 +2 thru 6</td>
     </tr>
     <tr>
-      <td class="bigbold">Albert Selina</td>
-      <td class="bigbold">-8</td>
-      <td>Corey Conners -3
--1 thru 9</td>
-      <td>Scottie Scheffler -3
-Not started</td>
-      <td>Webb Simpson -1
-E thru 6</td>
-      <td>Will Zalatoris -1
-E thru 4</td>
-      <td class="greyout leftborder">Jon Rahm(W) E
--2 thru 4</td>
-      <td class="greyout">Xander Schauffele +2
-E thru 3</td>
-    </tr>
-    <tr>
       <td class="bigbold">Santorini Sunrises</td>
       <td class="bigbold">-8</td>
       <td>Cameron Smith -4
@@ -394,6 +378,22 @@ E thru 4</td>
 E thru 3</td>
       <td class="greyout">Adam Scott +2
 Not started</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Albert Selina</td>
+      <td class="bigbold">-7</td>
+      <td>Corey Conners -3
+-1 thru 9</td>
+      <td>Scottie Scheffler -3
+Not started</td>
+      <td>Will Zalatoris -1
+E thru 4</td>
+      <td>Jon Rahm(W) E
+-2 thru 4</td>
+      <td class="greyout leftborder">Webb Simpson E
++1 thru 7</td>
+      <td class="greyout">Xander Schauffele +2
+E thru 3</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Wilson</td>
