--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 11:39:21 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 11:40:04 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -143,7 +143,7 @@ body {
       <td class="bigbold">Tom Davis</td>
       <td class="bigbold">-13</td>
       <td>Dustin Johnson(W) -4
--1 thru 4</td>
+-1 thru 5</td>
       <td>Cameron Smith -4
 Not started</td>
       <td>Corey Conners -3
@@ -182,8 +182,8 @@ Not started</td>
 Not started</td>
       <td>Will Zalatoris -1
 E thru 4</td>
-      <td class="greyout leftborder">Brooks Koepka +2
--1 thru 2</td>
+      <td class="greyout leftborder">Brooks Koepka +3
+E thru 3</td>
       <td class="greyout">Russell Henley +4
 +3 thru 9</td>
     </tr>
@@ -230,9 +230,9 @@ Not started</td>
 Not started</td>
       <td>Talor Gooch E
 Not started</td>
-      <td class="greyout leftborder">Brooks Koepka +2
--1 thru 2</td>
-      <td class="greyout">Xander Schauffele +2
+      <td class="greyout leftborder">Xander Schauffele +2
+E thru 3</td>
+      <td class="greyout">Brooks Koepka +3
 E thru 3</td>
     </tr>
     <tr>
@@ -246,9 +246,9 @@ Not started</td>
 E thru 4</td>
       <td>Matthew Fitzpatrick E
 +1 thru 2</td>
-      <td class="greyout leftborder">Brooks Koepka +2
--1 thru 2</td>
-      <td class="greyout">Xander Schauffele +2
+      <td class="greyout leftborder">Xander Schauffele +2
+E thru 3</td>
+      <td class="greyout">Brooks Koepka +3
 E thru 3</td>
     </tr>
     <tr>
@@ -278,9 +278,9 @@ Not started</td>
 E thru 4</td>
       <td>Jon Rahm E
 -2 thru 4</td>
-      <td class="greyout leftborder">Brooks Koepka +2
--1 thru 2</td>
-      <td class="greyout">Jordan Spieth +2
+      <td class="greyout leftborder">Jordan Spieth +2
+E thru 3</td>
+      <td class="greyout">Brooks Koepka +3
 E thru 3</td>
     </tr>
     <tr>
@@ -328,8 +328,8 @@ E thru 4</td>
 +1 thru 3</td>
       <td class="greyout leftborder">Shane Lowry +1
 Not started</td>
-      <td class="greyout">Brooks Koepka +2
--1 thru 2</td>
+      <td class="greyout">Brooks Koepka +3
+E thru 3</td>
     </tr>
     <tr>
       <td class="bigbold">Roy Jeffrey B</td>
@@ -367,17 +367,17 @@ Not started</td>
       <td class="bigbold">CRED</td>
       <td class="bigbold">-7</td>
       <td>Dustin Johnson -4
--1 thru 4</td>
+-1 thru 5</td>
       <td>Scottie Scheffler -3
 Not started</td>
       <td>Patrick Cantlay -2
 E thru 4</td>
-      <td>Brooks Koepka(W) +2
--1 thru 2</td>
-      <td class="greyout leftborder">Xander Schauffele +2
+      <td>Xander Schauffele +2
 E thru 3</td>
-      <td class="greyout">Adam Scott +2
+      <td class="greyout leftborder">Adam Scott +2
 Not started</td>
+      <td class="greyout">Brooks Koepka(W) +3
+E thru 3</td>
     </tr>
     <tr>
       <td class="bigbold">Albert Selina</td>
@@ -412,22 +412,6 @@ E thru 3</td>
 E thru 3</td>
     </tr>
     <tr>
-      <td class="bigbold">BCREAMED</td>
-      <td class="bigbold">-7</td>
-      <td>Cameron Smith(W) -4
-Not started</td>
-      <td>Scottie Scheffler -3
-Not started</td>
-      <td>Patrick Cantlay -2
-E thru 4</td>
-      <td>Brooks Koepka +2
--1 thru 2</td>
-      <td class="greyout leftborder">Louis Oosthuizen +4
-Not started</td>
-      <td class="greyout">Sam Burns +5
-+2 thru 6</td>
-    </tr>
-    <tr>
       <td class="bigbold">Uphill into the Wind</td>
       <td class="bigbold">-7</td>
       <td>Cameron Smith -4
@@ -436,12 +420,12 @@ Not started</td>
 Not started</td>
       <td>Patrick Cantlay -2
 E thru 4</td>
-      <td>Brooks Koepka +2
--1 thru 2</td>
-      <td class="greyout leftborder">Xander Schauffele +2
+      <td>Xander Schauffele +2
 E thru 3</td>
-      <td class="greyout">Billy Horschel +5
-+3 thru 4</td>
+      <td class="greyout leftborder">Brooks Koepka +3
+E thru 3</td>
+      <td class="greyout">Billy Horschel +6
++4 thru 5</td>
     </tr>
     <tr>
       <td class="bigbold">The Resort</td>
@@ -472,14 +456,14 @@ Not started</td>
 Not started</td>
       <td class="greyout leftborder">Hideki Matsuyama E
 Not started</td>
-      <td class="greyout">Brooks Koepka +2
--1 thru 2</td>
+      <td class="greyout">Brooks Koepka +3
+E thru 3</td>
     </tr>
     <tr>
       <td class="bigbold">Lorette Hosegood</td>
       <td class="bigbold">-6</td>
       <td>Dustin Johnson -4
--1 thru 4</td>
+-1 thru 5</td>
       <td>Patrick Cantlay -2
 E thru 4</td>
       <td>Rory McIlroy(W) E
@@ -490,6 +474,22 @@ E thru 4</td>
 +1 thru 3</td>
       <td class="greyout">Jordan Spieth +2
 E thru 3</td>
+    </tr>
+    <tr>
+      <td class="bigbold">BCREAMED</td>
+      <td class="bigbold">-6</td>
+      <td>Cameron Smith(W) -4
+Not started</td>
+      <td>Scottie Scheffler -3
+Not started</td>
+      <td>Patrick Cantlay -2
+E thru 4</td>
+      <td>Brooks Koepka +3
+E thru 3</td>
+      <td class="greyout leftborder">Louis Oosthuizen +4
+Not started</td>
+      <td class="greyout">Sam Burns +5
++2 thru 6</td>
     </tr>
     <tr>
       <td class="bigbold">Bill Hunter</td>
@@ -516,9 +516,9 @@ Not started</td>
 Not started</td>
       <td>Jon Rahm(W) E
 -2 thru 4</td>
-      <td>Brooks Koepka +2
--1 thru 2</td>
-      <td class="greyout leftborder">Xander Schauffele +2
+      <td>Xander Schauffele +2
+E thru 3</td>
+      <td class="greyout leftborder">Brooks Koepka +3
 E thru 3</td>
       <td class="greyout">Sam Burns +5
 +2 thru 6</td>
@@ -532,9 +532,9 @@ Not started</td>
 E thru 4</td>
       <td>Will Zalatoris -1
 E thru 4</td>
-      <td>Brooks Koepka +2
--1 thru 2</td>
-      <td class="greyout leftborder">Xander Schauffele +2
+      <td>Xander Schauffele +2
+E thru 3</td>
+      <td class="greyout leftborder">Brooks Koepka +3
 E thru 3</td>
       <td class="greyout">Justin Thomas(W) +4
 Not started</td>
@@ -559,7 +559,7 @@ E thru 3</td>
       <td class="bigbold">Matt Tummon</td>
       <td class="bigbold">-5</td>
       <td>Dustin Johnson -4
--1 thru 4</td>
+-1 thru 5</td>
       <td>Patrick Cantlay -2
 E thru 4</td>
       <td>Jon Rahm E
@@ -568,8 +568,8 @@ E thru 4</td>
 +1 thru 3</td>
       <td class="greyout leftborder">Jordan Spieth(W) +2
 E thru 3</td>
-      <td class="greyout">Brooks Koepka +2
--1 thru 2</td>
+      <td class="greyout">Brooks Koepka +3
+E thru 3</td>
     </tr>
     <tr>
       <td class="bigbold">Jack Fleck</td>
@@ -662,8 +662,8 @@ E thru 4</td>
 +1 thru 2</td>
       <td>Shane Lowry +1
 Not started</td>
-      <td class="greyout leftborder">Brooks Koepka +2
--1 thru 2</td>
+      <td class="greyout leftborder">Brooks Koepka +3
+E thru 3</td>
       <td class="greyout">Justin Thomas(W) +4
 Not started</td>
     </tr>
@@ -678,8 +678,8 @@ E thru 4</td>
 -1 thru 3</td>
       <td>Jon Rahm E
 -2 thru 4</td>
-      <td class="greyout leftborder">Brooks Koepka +2
--1 thru 2</td>
+      <td class="greyout leftborder">Brooks Koepka +3
+E thru 3</td>
       <td class="greyout">Justin Thomas(W) +4
 Not started</td>
     </tr>
@@ -687,7 +687,7 @@ Not started</td>
       <td class="bigbold">Wild Billy Mitchell</td>
       <td class="bigbold">-4</td>
       <td>Dustin Johnson(W) -4
--1 thru 4</td>
+-1 thru 5</td>
       <td>Tony Finau -1
 Not started</td>
       <td>Matthew Fitzpatrick E
@@ -710,8 +710,8 @@ E thru 4</td>
 +1 thru 3</td>
       <td>Shane Lowry +1
 Not started</td>
-      <td class="greyout leftborder">Brooks Koepka +2
--1 thru 2</td>
+      <td class="greyout leftborder">Brooks Koepka +3
+E thru 3</td>
       <td class="greyout">Justin Thomas(W) +4
 Not started</td>
     </tr>
@@ -756,9 +756,9 @@ E thru 3</td>
 Not started</td>
       <td>Shane Lowry +1
 Not started</td>
-      <td>Brooks Koepka +2
--1 thru 2</td>
-      <td class="greyout leftborder">Jordan Spieth +2
+      <td>Jordan Spieth +2
+E thru 3</td>
+      <td class="greyout leftborder">Brooks Koepka +3
 E thru 3</td>
       <td class="greyout">Justin Thomas(W) +4
 Not started</td>
@@ -774,8 +774,8 @@ E thru 4</td>
 -2 thru 4</td>
       <td>Jordan Spieth(W) +2
 E thru 3</td>
-      <td class="greyout leftborder">Brooks Koepka +2
--1 thru 2</td>
+      <td class="greyout leftborder">Brooks Koepka +3
+E thru 3</td>
       <td class="greyout">Sam Burns +5
 +2 thru 6</td>
     </tr>
@@ -790,9 +790,9 @@ Not started</td>
 -2 thru 4</td>
       <td>Collin Morikawa E
 -1 thru 4</td>
-      <td class="greyout leftborder">Brooks Koepka +2
--1 thru 2</td>
-      <td class="greyout">Jordan Spieth +2
+      <td class="greyout leftborder">Jordan Spieth +2
+E thru 3</td>
+      <td class="greyout">Brooks Koepka +3
 E thru 3</td>
     </tr>
     <tr>
@@ -854,9 +854,9 @@ Not started</td>
 -1 thru 3</td>
       <td>Viktor Hovland +1
 +1 thru 3</td>
-      <td class="greyout leftborder">Brooks Koepka +2
--1 thru 2</td>
-      <td class="greyout">Xander Schauffele +2
+      <td class="greyout leftborder">Xander Schauffele +2
+E thru 3</td>
+      <td class="greyout">Brooks Koepka +3
 E thru 3</td>
     </tr>
     <tr>
@@ -866,11 +866,11 @@ E thru 3</td>
 Not started</td>
       <td>Patrick Cantlay -2
 E thru 4</td>
-      <td>Brooks Koepka +2
--1 thru 2</td>
       <td>Xander Schauffele +2
 E thru 3</td>
-      <td class="greyout leftborder">Jordan Spieth +2
+      <td>Jordan Spieth +2
+E thru 3</td>
+      <td class="greyout leftborder">Brooks Koepka +3
 E thru 3</td>
       <td class="greyout">Justin Thomas(W) +4
 Not started</td>
@@ -900,11 +900,11 @@ Not started</td>
 -2 thru 4</td>
       <td>Viktor Hovland +1
 +1 thru 3</td>
-      <td>Brooks Koepka +2
--1 thru 2</td>
-      <td class="greyout leftborder">Xander Schauffele +2
+      <td>Xander Schauffele +2
 E thru 3</td>
-      <td class="greyout">Jordan Spieth +2
+      <td class="greyout leftborder">Jordan Spieth +2
+E thru 3</td>
+      <td class="greyout">Brooks Koepka +3
 E thru 3</td>
     </tr>
     <tr>
@@ -916,9 +916,9 @@ E thru 4</td>
 -2 thru 4</td>
       <td>Hideki Matsuyama E
 Not started</td>
-      <td>Brooks Koepka +2
--1 thru 2</td>
-      <td class="greyout leftborder">Jordan Spieth +2
+      <td>Jordan Spieth +2
+E thru 3</td>
+      <td class="greyout leftborder">Brooks Koepka +3
 E thru 3</td>
       <td class="greyout">Justin Thomas +4
 Not started</td>
@@ -948,23 +948,23 @@ E thru 4</td>
 -1 thru 3</td>
       <td>Jon Rahm E
 -2 thru 4</td>
-      <td>Brooks Koepka +2
--1 thru 2</td>
-      <td class="greyout leftborder">Xander Schauffele +2
+      <td>Xander Schauffele +2
+E thru 3</td>
+      <td class="greyout leftborder">Brooks Koepka +3
 E thru 3</td>
       <td class="greyout">Justin Thomas +4
 Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Wylie</td>
-      <td class="bigbold">0</td>
+      <td class="bigbold">1</td>
       <td>Scottie Scheffler -3
 Not started</td>
       <td>Will Zalatoris -1
 E thru 4</td>
-      <td>Brooks Koepka +2
--1 thru 2</td>
       <td>Xander Schauffele +2
+E thru 3</td>
+      <td>Brooks Koepka +3
 E thru 3</td>
       <td class="greyout leftborder">Justin Thomas(W) +4
 Not started</td>
@@ -994,11 +994,11 @@ Not started</td>
 E thru 4</td>
       <td>Collin Morikawa E
 -1 thru 4</td>
-      <td>Brooks Koepka +2
--1 thru 2</td>
       <td>Xander Schauffele +2
 E thru 3</td>
-      <td class="greyout leftborder">Jordan Spieth +2
+      <td>Jordan Spieth +2
+E thru 3</td>
+      <td class="greyout leftborder">Brooks Koepka +3
 E thru 3</td>
       <td class="greyout">Justin Thomas(W) +4
 Not started</td>
@@ -1014,9 +1014,9 @@ Not started</td>
 +1 thru 3</td>
       <td>Patrick Reed +1
 -1 thru 8</td>
-      <td class="greyout leftborder">Brooks Koepka +2
--1 thru 2</td>
-      <td class="greyout">Jordan Spieth +2
+      <td class="greyout leftborder">Jordan Spieth +2
+E thru 3</td>
+      <td class="greyout">Brooks Koepka +3
 E thru 3</td>
     </tr>
     <tr>
@@ -1028,9 +1028,9 @@ E thru 4</td>
 -2 thru 4</td>
       <td>Viktor Hovland +1
 +1 thru 3</td>
-      <td>Brooks Koepka +2
--1 thru 2</td>
-      <td class="greyout leftborder">Jordan Spieth +2
+      <td>Jordan Spieth +2
+E thru 3</td>
+      <td class="greyout leftborder">Brooks Koepka +3
 E thru 3</td>
       <td class="greyout">Justin Thomas +4
 Not started</td>
@@ -1052,33 +1052,17 @@ Not started</td>
 +1 thru 10</td>
     </tr>
     <tr>
-      <td class="bigbold">Tony Muir</td>
-      <td class="bigbold">5</td>
-      <td>Jon Rahm(W) E
--2 thru 4</td>
-      <td>Viktor Hovland +1
-+1 thru 3</td>
-      <td>Brooks Koepka +2
--1 thru 2</td>
-      <td>Xander Schauffele +2
-E thru 3</td>
-      <td class="greyout leftborder">Louis Oosthuizen +4
-Not started</td>
-      <td class="greyout">Justin Thomas +4
-Not started</td>
-    </tr>
-    <tr>
       <td class="bigbold">Yellow in Augusta</td>
       <td class="bigbold">5</td>
       <td>Jon Rahm E
 -2 thru 4</td>
       <td>Viktor Hovland +1
 +1 thru 3</td>
-      <td>Brooks Koepka +2
--1 thru 2</td>
       <td>Xander Schauffele +2
 E thru 3</td>
-      <td class="greyout leftborder">Jordan Spieth +2
+      <td>Jordan Spieth +2
+E thru 3</td>
+      <td class="greyout leftborder">Brooks Koepka +3
 E thru 3</td>
       <td class="greyout">Justin Thomas(W) +4
 Not started</td>
@@ -1097,6 +1081,22 @@ E thru 3</td>
       <td class="greyout leftborder">Justin Thomas(W) +4
 Not started</td>
       <td class="greyout">Louis Oosthuizen +4
+Not started</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Tony Muir</td>
+      <td class="bigbold">6</td>
+      <td>Jon Rahm(W) E
+-2 thru 4</td>
+      <td>Viktor Hovland +1
++1 thru 3</td>
+      <td>Xander Schauffele +2
+E thru 3</td>
+      <td>Brooks Koepka +3
+E thru 3</td>
+      <td class="greyout leftborder">Louis Oosthuizen +4
+Not started</td>
+      <td class="greyout">Justin Thomas +4
 Not started</td>
     </tr>
   </tbody>
