--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 11:39:21 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 11:40:04 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -198,8 +198,8 @@ E thru 4</td>
 -1 thru 4</td>
       <td>Viktor Hovland(W) +1
 +1 thru 3</td>
-      <td class="greyout leftborder">Brooks Koepka +2
--1 thru 2</td>
+      <td class="greyout leftborder">Brooks Koepka +3
+E thru 3</td>
       <td class="greyout">Justin Thomas +4
 Not started</td>
     </tr>
@@ -214,9 +214,9 @@ E thru 4</td>
 -1 thru 4</td>
       <td>Rory McIlroy E
 -1 thru 3</td>
-      <td class="greyout leftborder">Brooks Koepka +2
--1 thru 2</td>
-      <td class="greyout">Xander Schauffele +2
+      <td class="greyout leftborder">Xander Schauffele +2
+E thru 3</td>
+      <td class="greyout">Brooks Koepka +3
 E thru 3</td>
     </tr>
     <tr>
@@ -239,7 +239,7 @@ Not started</td>
       <td class="bigbold">Matt Tummon</td>
       <td class="bigbold">-5</td>
       <td>Dustin Johnson -4
--1 thru 4</td>
+-1 thru 5</td>
       <td>Patrick Cantlay -2
 E thru 4</td>
       <td>Jon Rahm E
@@ -248,8 +248,8 @@ E thru 4</td>
 +1 thru 3</td>
       <td class="greyout leftborder">Jordan Spieth(W) +2
 E thru 3</td>
-      <td class="greyout">Brooks Koepka +2
--1 thru 2</td>
+      <td class="greyout">Brooks Koepka +3
+E thru 3</td>
     </tr>
     <tr>
       <td class="bigbold">Andrew Winchester</td>
@@ -262,8 +262,8 @@ E thru 4</td>
 +1 thru 2</td>
       <td>Shane Lowry +1
 Not started</td>
-      <td class="greyout leftborder">Brooks Koepka +2
--1 thru 2</td>
+      <td class="greyout leftborder">Brooks Koepka +3
+E thru 3</td>
       <td class="greyout">Justin Thomas(W) +4
 Not started</td>
     </tr>
@@ -310,9 +310,9 @@ E thru 4</td>
 -2 thru 4</td>
       <td>Shane Lowry +1
 Not started</td>
-      <td class="greyout leftborder">Brooks Koepka +2
--1 thru 2</td>
-      <td class="greyout">Jordan Spieth +2
+      <td class="greyout leftborder">Jordan Spieth +2
+E thru 3</td>
+      <td class="greyout">Brooks Koepka +3
 E thru 3</td>
     </tr>
     <tr>
@@ -326,8 +326,8 @@ Not started</td>
 Not started</td>
       <td>Collin Morikawa E
 -1 thru 4</td>
-      <td class="greyout leftborder">Brooks Koepka +2
--1 thru 2</td>
+      <td class="greyout leftborder">Brooks Koepka +3
+E thru 3</td>
       <td class="greyout">Justin Thomas(W) +4
 Not started</td>
     </tr>
@@ -344,14 +344,14 @@ Not started</td>
 -1 thru 4</td>
       <td class="greyout leftborder">Jordan Spieth +2
 E thru 3</td>
-      <td class="greyout">Brooks Koepka +2
--1 thru 2</td>
+      <td class="greyout">Brooks Koepka +3
+E thru 3</td>
     </tr>
     <tr>
       <td class="bigbold">Jamie Watters</td>
       <td class="bigbold">-1</td>
       <td>Dustin Johnson -4
--1 thru 4</td>
+-1 thru 5</td>
       <td>Corey Conners -3
 -1 thru 9</td>
       <td>Xander Schauffele(W) +2
@@ -390,8 +390,8 @@ Not started</td>
 +1 thru 3</td>
       <td>Patrick Reed +1
 -1 thru 8</td>
-      <td class="greyout leftborder">Brooks Koepka +2
--1 thru 2</td>
+      <td class="greyout leftborder">Brooks Koepka +3
+E thru 3</td>
       <td class="greyout">Luke List +5
 Not started</td>
     </tr>
